--- a/styles.css
+++ b/styles.css
@@ -8,19 +8,26 @@ body {
 .grid-container{
   
   display: grid;
-  grid-template-rows: 100px 100px 100px 100px 100px 100px;
-  /* grid-template-columns: 1fr 2fr 1fr; */
-  grid-gap: .5em;
+  grid-template-areas: 
+
+    "header header header" 
+    "sidebar main treatment"
+    " .   content   . "
+    ;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: 2fr 3fr 1fr ;
+  gap: 30px 20px;
   padding: 20px;
   box-sizing: border-box;
-  
+  height: 100vh;
 }
-
 .grid-container .header{
  
   /* grid-row: 1/2;
   grid-column: 1/7 ; */
-  grid-area: 1 / 1 / 2 / 7;
+  /* grid-area: 1 / 1 / 2 / 7; */
+  /* grid-area: rowstart / colstart / rowend / colend */
+  grid-area: header;
   background-color: red;
   font-size: 1.2rem;
   align-items: center;
@@ -34,8 +41,8 @@ body {
 
 /* grid-row:2/4 ;
 grid-column: 1/3; */
-/* grid-area: rowstart / colstart / rowend / colend */
-grid-area: 2 / 1 / 4 / 3;
+/* grid-area: 2 / 1 / 4 / 3; */
+grid-area: sidebar;
 background-color: #FC04E3;
 font-size: 1.2rem;
 align-items: center;
@@ -49,7 +56,8 @@ border-radius: 10px;
 
   /* grid-row: 2/5;
   grid-column: 3/6; */
-  grid-area: 2 /3 / 5 / 6;
+  /* grid-area: 2 /3 / 5 / 6; */
+  grid-area: main;
   background-color: #04FC0C;
   font-size: 1.2rem;
   align-items: center;
@@ -64,7 +72,8 @@ border-radius: 10px;
 
   /* grid-row: 2/4;
   grid-column: 6/7; */
-  grid-area: 2 / 6 / 4 / 7;
+  /* grid-area: 2 / 6 / 4 / 7; */
+  grid-area: treatment;
   background-color: #FCF404;
   font-size: 1.2rem;
   align-items: center;
@@ -72,13 +81,15 @@ border-radius: 10px;
   color: black;
   display: flex;
   border-radius: 10px;
+ 
 }
 
 .grid-container .content{
  
   /* grid-row: 5/7;
   grid-column: 3/6; */
-  grid-area: 5 / 3 / 7 / 6;
+  /* grid-area: 5 / 3 / 7 / 6; */
+  grid-area: content;
   background-color: #0411FC;
   font-size: 1.2rem;
   align-items: center;
@@ -93,32 +104,15 @@ border-radius: 10px;
 
   .grid-container{
   
-   
-    border-radius: 4px;
-    grid-gap: .9em;
-    
-  }
-  .grid-container .header{
+    grid-template-areas: 
   
-    grid-area: 1 / 1 / 2 / 7;
+      "header" 
+      "sidebar"
+      "main"
+      "treatment"
+      "content"
+      ;
     
-  }
-  .grid-container .main{
-
-    grid-area: 2 / 1 / 3 / 7;
-  }
-  .grid-container .sidebar{
-
-    grid-area: 3 / 1 / 4 / 7;
-
-  }
-  .grid-container .treatment{
-
-    grid-area: 4 / 1 / 5 / 7;
-  }
-
-  .grid-container .content{
-
-    grid-area: 5 / 1 / 6 / 7;
-  }
+    grid-template-columns: 1fr ;
+  } 
 }
